--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ distro==1.9.0
 Flask==3.1.0
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
@@ -18,6 +19,7 @@ jiter==0.7.1
 Mako==1.3.6
 MarkupSafe==3.0.2
 openai==1.55.0
+packaging==24.2
 pydantic==2.10.0
 pydantic_core==2.27.0
 python-dotenv==1.0.1
